[tool.poetry]
name = "merakitools"
version = "0.1.10"
description = "CLI tools for managing Meraki networks based on Typer"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]
readme = "README.md"

[tool.poetry.scripts]
merakitools = "merakitools.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.5.0"}
meraki = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
pylint = "^2.14.4"
bandit = {extras = ["toml"], version = "^1.7.4"}

[tool.poetry.urls]
documentation = "https://github.com/billyzoellers/merakitools/README.md"
source = "https://github.com/billyzoellers/merakitools"
tracker = "https://github.com/billyzoellers/merakitools/issues"

[tool.black]
preview = true

[tool.pylint.format]
max-line-length = "88"

[tool.bandit]
skips = ["B101",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
