[tool.poetry]
name = "merakitools"
version = "0.1.11"
description = "CLI tools for managing Meraki networks based on Typer"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]
readme = "README.md"

[tool.poetry.scripts]
merakitools = "merakitools.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.6.1"}
meraki = "^1.27.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"
black = "^22.6.0"
bandit = {extras = ["toml"], version = "^1.7.4"}

[tool.poetry.urls]
documentation = "https://github.com/billyzoellers/merakitools/README.md"
source = "https://github.com/billyzoellers/merakitools"
tracker = "https://github.com/billyzoellers/merakitools/issues"

[tool.black]
preview = true

[tool.pylint.format]
max-line-length = "88"

[tool.bandit]
skips = ["B101",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
