[tool.poetry]
name = "merakitools"
version = "0.1.11"
description = "CLI tools for managing Meraki networks based on Typer"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]
readme = "README.md"

[tool.poetry.scripts]
merakitools = "merakitools.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = ">=0.15.2"}
meraki = ">=2.0.1"

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.6"
pytest = ">=7.2.1"
black = ">=25.1.0"
bandit = {extras = ["toml"], version = ">=1.8.3"}

[tool.poetry.urls]
documentation = "https://github.com/billyzoellers/merakitools/README.md"
source = "https://github.com/billyzoellers/merakitools"
tracker = "https://github.com/billyzoellers/merakitools/issues"

[tool.black]
preview = true

[tool.pylint.format]
max-line-length = "88"

[tool.bandit]
skips = ["B101",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
